<resources>
    <string name="app_name">Spato</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="login_to">Login To</string>
    <string name="spato">Spato</string>
    <string name="provide_your_email_and_password_to_continue">Provide your email and password to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="provide_your_contact_details_to_create_your_account">Provide your contact details to create your account</string>
    <string name="enter_your_contact_details">Enter your contact details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login2">Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password</string>
    <string name="next">NEXT</string>
    <string name="enter_code_sent_to_your_email">Enter code sent to your email</string>
    <string name="we_sent_verification_code_to_your_email">We sent verification code to your email:</string>
    <string name="done">DONE</string>
    <string name="resend">Resend</string>
    <string name="change_password">Change Password</string>
    <string name="your_identity_has_been_verified_nset_your_new_password">Your identity has been verified!\nSet your new password</string>
    <string name="update">UPDATE</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="update_profile">Update Profile</string>
    <string name="my_favorites">My Favorites</string>
    <string name="settings">Settings</string>
    <string name="company_policy">Company Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="basic_information">Basic Information</string>
    <string name="payment_setting">Payment Setting</string>
    <string name="my_addresses">My Addresses</string>
    <string name="product_request">Product Request</string>
    <string name="personal_information">Personal Information</string>
    <string name="message">Message...</string>
    <string name="product_information">Product Information</string>
    <string name="product_name">Product Name</string>
    <string name="specific_spare_part">Specific Spare Part</string>
    <string name="spare_part_details">Spare Part Details...</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="send_request">Send Request</string>
    <string name="details">Details</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="payment_method">Payment Method</string>
    <string name="track_your_shipment">Track Your Shipment</string>
    <string name="current">Current</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="comeback_soon">Comeback Soon!</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">CANCEL</string>
    <string name="my_cart">My Cart</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="add_new_address">Add New Address</string>
    <string name="save_address">Save Address</string>
    <string name="add_address">Add Address</string>
    <string name="account_created_successfully">Account created successfully</string>
    <string name="login_successfully">Login successfully</string>
    <string name="otp_has_been_sent">OTP has been sent</string>
    <string name="otp_has_been_verified">OTP has been verified</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="go_to_home">Go To Home</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="delivery_is_expected_5_7_working_days_our_courier_will_contact_you">Delivery is expected 5-7 working days. Our courier will contact you.</string>
    <string name="total">Total</string>
    <string name="quantity_cant_be_less_than_one">Quantity can\'t be less than one</string>
    <string name="start_from">Start From</string>
    <string name="shop_now">Shop Now</string>
    <string name="all_product">All Product</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="request_spare_part">Request Spare Part</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_is_not_available">Product is not available</string>
    <string name="only">Only</string>
    <string name="items_available">items available</string>
    <string name="added_successfully">Added successfully</string>
    <string name="products_related_to_this_item">Products related to this item</string>
    <string name="requested_successfully">Requested successfully</string>
    <string name="track_order">Track Order</string>
    <string name="products_by">Products By</string>
    <string name="specialist_wholesaler_for_pools_equipments"><![CDATA[Specialist Wholesaler For \n Pools & Equipments]]></string>
    <string name="profile_edited_successfully">Profile edited successfully</string>
    <string name="profile_pic_edited_successfully">Profile pic edited successfully</string>
    <string name="contact_support">Contact Support</string>
    <string name="phone_number">Phone number:</string>
    <string name="country_region">Country/Region</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="town_city">Town/City</string>
    <string name="choose_a_state">Choose a state</string>
    <string name="_6_digits_0_9_pin_code">6 digits [0-9] PIN code</string>
    <string name="street">Street</string>
    <string name="address_added_successfully">Address added successfully</string>
    <string name="address_updated_successfully">Address updated successfully</string>
    <string name="update_address">Update Address</string>
    <string name="delivery_is_not_allowed_to_selected_country">Delivery is not allowed to selected country</string>
    <string name="products">Products</string>
    <string name="carts">Carts</string>
    <string name="please_type_something">Please type something</string>
    <string name="no_product_found">No product found</string>
    <string name="products_by_search">Products by search</string>
    <string name="delete_account">Delete Account?</string>
    <string name="choose_address">Choose Address</string>
    <string name="please_select_any_address">Please select any address</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="paypal">PayPal</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="bank">BANK</string>
    <string name="stadt_sparkasse_solingen">Stadt Sparkasse Solingen</string>
    <string name="ifsc">IFSC</string>
    <string name="solsde33xxx">SOLSDE33XXX</string>
    <string name="de183425000000018942">DE183425000000018942</string>
    <string name="_34250000">34250000</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="info_spato_de">info@spato.de</string>
    <string name="paypal_id">PayPal Id</string>
    <string name="checkout">Checkout</string>
    <string name="please_select_payment_method">Please select payment method</string>
    <string name="password_must_be_minimum_6_characters">Password must be minimum 6 characters</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="enter_otp">Enter otp</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_and_confirm_password_are_not_same">Password and confirm password are not same</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="go_to_setting">GO TO SETTING</string>
    <string name="this_app_needs_storage_access_to_function_properly_please_allow_it_from_setting">This app needs storage access to function properly. Please allow it from setting.</string>
    <string name="enter_spare_part_name">Enter spare part name</string>
    <string name="enter_your_6_digit_pincode">Enter your 6 digit pincode</string>
    <string name="enter_a_valid_pincode">Enter a valid pincode</string>
    <string name="enter_your_flat_company_street_sector_village">Enter your flat, company, street, sector, village</string>
    <string name="enter_your_town_city">Enter your town, city</string>
    <string name="please_choose_a_state">Please choose a state</string>
    <string name="language">Language</string>
    <string name="search_equipment">Search Equipment..</string>
    <string name="failed_try_again">Failed. Try again!</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="user_guide">User Guide</string>
    <string name="downloading">Downloading...</string>
    <string name="skip">Skip</string>
    <string name="newsletters">Newsletters</string>
</resources>