<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="@dimen/_12sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/deleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/permission_denied"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/this_app_needs_storage_access_to_function_properly_please_allow_it_from_setting"
        android:textColor="@color/spato_secondary_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteAccount"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:padding="@dimen/_6sdp"
        android:text="@string/cancel2"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toStartOf="@+id/goToSetting"
        app:layout_constraintTop_toBottomOf="@id/message"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/goToSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_setting"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:padding="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>