<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/_18sdp"
    android:paddingTop="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/half_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/logoutImage"
        android:layout_width="@dimen/_85sdp"
        android:layout_height="@dimen/_85sdp"
        android:src="@drawable/logout_image"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/comebackSoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comeback_soon"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_16ssp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintStart_toEndOf="@id/logoutImage"
        app:layout_constraintTop_toTopOf="@id/logoutImage"/>

    <TextView
        android:id="@+id/areYouSure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/are_you_sure_you_want_to_logout"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@+id/comebackSoon"
        app:layout_constraintStart_toStartOf="@id/comebackSoon"
        app:layout_constraintTop_toBottomOf="@id/comebackSoon" />

    <LinearLayout
        android:id="@+id/llBottomSheetLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="@drawable/spato_button_background"
        android:foreground="@drawable/colored_ripple_effect"
        app:layout_constraintTop_toBottomOf="@id/areYouSure"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/yes_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/transparent_ripple_effect"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="@id/llBottomSheetLogout"
        app:layout_constraintEnd_toStartOf="@id/llBottomSheetLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/llBottomSheetLogout" />


</androidx.constraintlayout.widget.ConstraintLayout>