<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spato_app_background_color"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:translationZ="90dp"
    android:id="@+id/topLayout"
    android:visibility="gone"
    android:scrollbarThumbVertical="@null">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/spatoLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/order_successfully_placed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderPlaced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/your_order_has_been_successfully_placed"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spatoLogo" />

        <TextView
            android:id="@+id/workingDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/delivery_is_expected_5_7_working_days_our_courier_will_contact_you"
            android:textAlignment="center"
            android:textColor="@color/half_white"
            android:textSize="@dimen/login_instruction_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderPlaced" />

        <LinearLayout
            android:id="@+id/llGoToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/spato_button_margin_bottom"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/spato_button_background"
            android:foreground="@drawable/colored_ripple_effect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/workingDays"
            app:layout_constraintVertical_bias="1"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/go_to_home" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/go_to_home"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/spato_button_text_size" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>